# insta-insights

./: .gitignore  README.md  docker-compose.yaml  sample-entry.json
backend/: Dockerfile  package-lock.json  package.json  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/models/: Account.py  Report.py
backend/scripts/: insta-fetch.tsx
backend/src/: server.ts
backend/src/models/: DontFollowMeBack.ts  IDontFollowBack.ts  User.ts
backend/src/public/: index.html
backend/src/routes/: userRoutes.ts
frontend/: Dockerfile  openapi.json  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
insta_scraper/: insta_scraper.py  main.py  original_script.ts
